terraform/4/security_groups.tf

resource "aws_security_group" "asg_postgres" {
    name        = "asg_postgres"
    vpc_id = "${aws_vpc.tf_vpc.id}"

    ingress {
        from_port   = 5432
        to_port     = 5432
        protocol    = "TCP"
        cidr_blocks = ["0.0.0.0/0"]
    }

    egress {
        from_port   = 0
        to_port     = 0
        protocol    = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }

    tags = {
        Name = "${var.name_tag}"
    }
}

resource "aws_security_group" "asg_ec2" {
    name = "asg_ec2"
    vpc_id = "${aws_vpc.tf_vpc.id}"

    ingress {
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
        from_port = 443
        to_port = 443
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
    tags = {
        Name = "${var.name_tag}"
    }

}
